เพิ่มระบบ Reload Plugins
Reload

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
 RewriteBase /HibernateUCP/
-RewriteCond $1 !^(index\.php|applications|assets|system|theme|img)
+RewriteCond $1 !^(index\.php|applications|assets|system|theme|img|plugins|test\.php)
 RewriteRule ^(.*)$ index.php [L]
